# keys-core

./: .gitignore  CONTRIBUTING.md  Cargo.toml  KNOWN-SECURITY-LIMITATIONS.md  README.md  SECURITY.md  deny.toml
.github/: dependabot.yml
.github/workflows/: ci.yml  release.yml  secret-scan.yml  swift-harness.yml
bindgen/: build-swift-iroh-sync.sh  build-swift.sh  normalise-xcframework-plist.py  provision-swift.sh
crates/keys-engine/: Cargo.toml
crates/keys-engine/docs/: predicate-versioning.md  query-surface.md  round-trip-invariants.md  schema.md
crates/keys-engine/src/: conflict_resolution.rs  conflict_rows.rs  crypto.rs  eff_wordlist.rs  engine.rs  error.rs  events.rs  file_watcher.rs  fingerprint.rs  history_snapshot.rs  ingest.rs  key_provider.rs  lib.rs  meta.rs  migrations.rs  model.rs  mutations.rs  portable.rs  predicate.rs  predicate_builtin.rs  predicate_sql.rs  projection.rs  reads.rs  reconcile.rs  reveal.rs  save.rs  smart_folder.rs  strength.rs  syllable_generator.rs  totp.rs  url_matcher.rs  uuid_source.rs
crates/keys-engine/src/engine/: conflict.rs  mod.rs  mutations.rs  queries.rs  reveal.rs
crates/keys-engine/src/migrations/: 0001_initial_schema.sql  0002_entry_custom_field.sql  0003_meta.sql  0004_group_sort_order.sql  0005_entry_has_totp.sql  0006_entry_custom_data.sql  0007_owner_conflict_rows.sql  0008_entry_previous_parent.sql  0009_conflict_entry_attachment.sql  0010_entry_location_changed.sql  0011_group_location_changed.sql  0012_persistence_watermark.sql
crates/keys-engine/src/util/: codec.rs  mod.rs  row.rs  sql.rs  tree.rs
crates/keys-engine/tests/: attachments.rs  common_ancestor.rs  conflict_resolution.rs  custom_fields_round_trip.rs  engine_custom_icon_surface.rs  engine_meta_surface.rs  engine_portable_entry.rs  engine_save_entry.rs  engine_touch_entry.rs  entry_has_totp.rs  entry_reads.rs  events.rs  external_change_merge.rs  file_watcher.rs  fingerprint.rs  group_ancestry.rs  group_reorder.rs  group_tree.rs  history.rs  history_attachments.rs  history_mutations.rs  history_push.rs  history_restore.rs  history_snapshot_compat.rs  history_wrap.rs  ingest.rs  kdbx_state_signature.rs  meta_persistence.rs  migrations.rs  mutations.rs  open_close.rs  parked_conflicts.rs  persistence_watermark.rs  phase_one_exit_gate.rs  predicate_builtin.rs  predicate_sql_e2e.rs  predicate_versioning.rs  projection.rs  purge.rs  query_api_stubs.rs  (+14 more)
crates/keys-ffi/: Cargo.toml  keys-core.udl
crates/keys-ffi/src/: db_key_provider.rs  dto.rs  engine.rs  engine_error.rs  engine_file_watcher.rs  engine_observer.rs  engine_portable.rs  engine_types.rs  error.rs  identity.rs  keyfile.rs  lib.rs  merge.rs  observer.rs  portable.rs  protector.rs  test_support.rs  totp.rs  vault.rs  vault_create.rs
crates/keys-ffi/src/vault/: mod.rs  mutations.rs  portable_merge.rs  queries.rs  reveal.rs
crates/keys-ffi/tests/: engine.rs  engine_create.rs  vault_accessors.rs  vault_create_empty.rs  vault_entry.rs  vault_field_protector.rs  vault_history.rs  vault_merge.rs  vault_observer.rs  vault_open.rs  vault_portable.rs  vault_protected.rs  vault_read.rs  vault_save.rs  vault_slice6.rs  verify_vault_identity.rs
crates/keys-ffi/tests/common/: mod.rs
crates/keys-iroh-sync/: Cargo.toml  README.md
crates/keys-iroh-sync/src/: error.rs  events.rs  identity.rs  lib.rs  node.rs  policy.rs
crates/keys-iroh-sync/tests/: loopback.rs
crates/uniffi-bindgen-swift/: Cargo.toml
crates/uniffi-bindgen-swift-029/: Cargo.toml
crates/uniffi-bindgen-swift-029/src/: main.rs
crates/uniffi-bindgen-swift/src/: main.rs
keyhole/: Cargo.toml  DESIGN.md
keyhole/scenarios/: attachment-both-sided-park.sh  attachment-cross-peer.sh  attachment-remove-no-resurrect.sh  attachment-roundtrip.sh  blob-pool-gc.sh  clock-lww.sh  concurrent-custom-field-add.sh  conflict-delete-clears-badge.sh  conflict-group-delete-clears-badge.sh  conflict-multipeer-no-overclear.sh  conflict-postingest-sweep-different-owner.sh  conflict-resolution-history-fold.sh  conflict-resolved-facet-isolation.sh  conflict-set-parity-3peer.sh  conflict-set-parity.sh  conflict-stale-badge-on-local-edit.sh  create-vault.sh  custom-icon-cross-peer.sh  default-recycle-bin.sh  delete-vs-edit.sh  deterministic-vault-uuids.sh  digest-oracle.sh  dirty-watermark.sh  empty-bin-propagates.sh  ensure-bin-on-add.sh  fuzz-attachments.sh  fuzz-convergence.sh  fuzz-replay-determinism.sh  group-adopt.sh  group-counts-in-bin.sh  group-delete-keeps-content.sh  group-delete.sh  group-move-cycle.sh  group-move-lww.sh  group-rename-lww.sh  history-delete-conflict-adopt.sh  history-delete-propagates.sh  history-quota-trim-propagates.sh  keyfile-peer-sync.sh  keyfile-vault.sh  (+30 more)
keyhole/scenarios/fixtures/: kdbx3-minimal.kdbx
keyhole/src/: adapters.rs  main.rs
swift-harness/: Package.swift
swift-harness-iroh-sync/: Package.swift
swift-harness/Tests/KeysCoreFFITests/: FFITestConvenience.swift  SmokeTests.swift  VaultEntryTests.swift  VaultMergeTests.swift  VaultObserverTests.swift  VaultOpenTests.swift  VaultProtectedTests.swift  VaultReadTests.swift  VaultSaveTests.swift  VaultSlice6Tests.swift  VaultSlice8Tests.swift
