[package]
name = "keys-engine"
description = "SQLCipher-backed query and mutation engine for the Keys password manager. Mirrors KDBX state into a local SQLCipher database and serves reads from there; KDBX is the sync substrate."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
publish.workspace = true

[lints]
workspace = true

[dependencies]
keepass-core = { path = "../../../KeepassCore/crates/keepass-core" }
rusqlite = { version = "0.32", features = ["bundled-sqlcipher-vendored-openssl"] }
secrecy = "0.10"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
uuid = { version = "1", features = ["serde", "v4"] }
zeroize = { version = "1", features = ["zeroize_derive"] }

[dev-dependencies]
tempfile = "3"
