[package]
name = "keys-engine"
description = "SQLCipher-backed query and mutation engine for the Keys password manager. Mirrors KDBX state into a local SQLCipher database and serves reads from there; KDBX is the sync substrate."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
publish.workspace = true

[lints]
workspace = true

[dependencies]
base64 = "0.22"
chrono = { version = "0.4", default-features = false, features = ["std", "clock"] }
getrandom = { version = "0.4", features = ["std"] }
hmac = "0.13"
keepass-core = { git = "https://github.com/Marmaladesoul/keepass-core" }
keepass-merge = { git = "https://github.com/Marmaladesoul/keepass-core" }
notify = "8"
psl = "2"
rand = "0.10"
rusqlite = { version = "0.40", features = ["bundled-sqlcipher-vendored-openssl"] }
secrecy = "0.10"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha1 = "0.11"
sha2 = "0.11"
tempfile = "3"
thiserror = "2"
url = "2"
uuid = { version = "1", features = ["serde", "v4"] }
zeroize = { version = "1", features = ["zeroize_derive"] }

[dev-dependencies]
aes-gcm = "0.10"
rand = "0.10"
