[package]
name = "keys-ffi"
description = "Private FFI facade for the Keys password manager. Consumes keepass-core and exposes a uniffi-generated API for SwiftUI and WinUI 3 frontends."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
publish.workspace = true

[lib]
crate-type = ["staticlib", "cdylib", "rlib"]

[lints]
workspace = true

[features]
# Enables the slice-4 round-trip helper `Vault::save_to_bytes_for_tests`.
# Slice 7 lands the production `save` / `save_to_bytes` methods and this
# feature gate is removed wholesale.
test_helpers = []

[dependencies]
# Path deps during Phase 2 — flip to crates.io once keepass-core v0.1 ships.
keepass-core = { path = "../../../KeepassCore/crates/keepass-core" }
keepass-merge = { path = "../../../KeepassCore/crates/keepass-merge" }

# uniffi 0.28, proc-macro path. No build.rs needed — `setup_scaffolding!()`
# emits everything inline. The Swift bindgen ships as a separate
# `uniffi-bindgen-swift` binary; see `bindgen/build-swift.sh`.
uniffi = { version = "0.28" }
secrecy = "0.10"
thiserror = "2"
chrono = { version = "0.4", default-features = false, features = ["std"] }
uuid = "1"

[dev-dependencies]
tempfile = "3"
