[package]
name = "keys-ffi"
description = "Private FFI facade for the Keys password manager. Consumes keepass-core and exposes a uniffi-generated API for SwiftUI and WinUI 3 frontends."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
publish.workspace = true

[lib]
crate-type = ["staticlib", "cdylib", "rlib"]

[lints]
workspace = true

[dependencies]
# Path deps during Phase 2 — flip to crates.io once keepass-core v0.1 ships.
keepass-core = { path = "../../../KeepassCore/crates/keepass-core" }
keepass-merge = { path = "../../../KeepassCore/crates/keepass-merge" }

# uniffi 0.28, proc-macro path. No build.rs needed — `setup_scaffolding!()`
# emits everything inline. The Swift bindgen ships as a separate
# `uniffi-bindgen-swift` binary; see `bindgen/build-swift.sh`.
uniffi = { version = "0.28" }
secrecy = "0.10"
sha2 = "0.10"
thiserror = "2"
chrono = { version = "0.4", default-features = false, features = ["std"] }
uuid = "1"
# tempfile drives the atomic `Vault::save` write loop (write-to-tempfile,
# fsync, persist via rename(2)). Lives at the facade because keepass-core
# only exposes `save_to_bytes`; if it ever gains a `save_to_path`, the
# facade collapses to one call.
tempfile = "3"
