[package]
name = "keys-ffi"
description = "FFI facade for the Keys password manager. Consumes keepass-core and exposes a uniffi-generated API consumed by the Keys client applications."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
publish.workspace = true

[lib]
crate-type = ["staticlib", "cdylib", "rlib"]

[lints]
workspace = true

[dependencies]
# Git deps on the public keepass-core repo so a clean clone builds without a
# side-by-side checkout. Flip to crates.io version deps once keepass-core ships there.
keepass-core = { git = "https://github.com/Marmaladesoul/keepass-core" }
keepass-merge = { git = "https://github.com/Marmaladesoul/keepass-core" }
keys-engine = { path = "../keys-engine" }

# uniffi 0.28, proc-macro path. No build.rs needed — `setup_scaffolding!()`
# emits everything inline. The Swift bindgen ships as a separate
# `uniffi-bindgen-swift` binary; see `bindgen/build-swift.sh`.
uniffi = { version = "0.28", features = ["tokio"] }
# Tokio is needed by uniffi's async dispatch (`async_runtime = "tokio"`)
# for the engine's slow ops (ingest_from_kdbx, save_to_kdbx,
# reconcile_with_disk). Multi-thread runtime so a Swift caller can keep
# the UI thread free while a save runs.
tokio = { version = "1", features = ["rt-multi-thread", "sync", "macros"] }
secrecy = "0.10"
# Scrub the bridge-layer Vec<u8>/[u8;32] copies of the AES-256 session key
# and the SQLCipher database key on drop. The destination wrappers
# (`SessionKey`, `DbKey`) already zeroize; this covers the intermediate
# Rust-side allocations the bridge holds across the FFI boundary.
zeroize = "1"
sha2 = "0.11"
thiserror = "2"
chrono = { version = "0.4", default-features = false, features = ["std"] }
uuid = "1"
# tempfile drives the atomic `Vault::save` write loop (write-to-tempfile,
# fsync, persist via rename(2)). Lives at the facade because keepass-core
# only exposes `save_to_bytes`; if it ever gains a `save_to_path`, the
# facade collapses to one call.
tempfile = "3"
