[package]
name = "keys-iroh-sync"
description = "iroh-based sync transport for the Keys password manager. Wraps iroh + iroh-docs + iroh-blobs into a stable library API that Keys clients (Mac, iOS, Windows) depend on for device sync, fleet sync, and friendship sync."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
publish.workspace = true

[lib]
# staticlib + cdylib for the future xcframework / Windows DLL build paths
# that Keys-iOS and keys-windows will drive; rlib so other workspace
# crates (and integration tests) can consume the Rust API directly.
crate-type = ["staticlib", "cdylib", "rlib"]

[lints]
workspace = true

[dependencies]
iroh = "1.0.0-rc.0"
iroh-blobs = "0.101"
iroh-docs = "0.99"
iroh-gossip = "0.99"
tokio = { version = "1", features = ["rt-multi-thread", "sync", "macros", "time"] }
anyhow = "1"
thiserror = "2"
tracing = "0.1"
n0-future = "0.3"
futures-util = "0.3"
# uniffi 0.29 in this crate (rest of KeysCore is on 0.28). The Keys-iOS
# spike validated 0.29's async + stream story end-to-end; bumping the
# transport library alone keeps the surface modern without forcing a
# coordinated bump of keys-ffi. Each crate generates its own scaffolding,
# so the versions don't conflict at link time.
uniffi = { version = "0.29", features = ["tokio"] }
# Zeroize the heap allocation holding the caller's 32-byte ed25519
# secret on drop, matching the bridge-layer scrub pattern already in
# keys-ffi. Without this, dropped Identity allocations sit in the
# heap until the allocator reuses them.
zeroize = { version = "1", features = ["derive"] }

[dev-dependencies]
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tempfile = "3"
tokio = { version = "1", features = ["rt-multi-thread", "sync", "macros", "time", "test-util"] }
