[package]
name = "uniffi-bindgen-swift-029"
description = "Sibling of uniffi-bindgen-swift, pinned to uniffi 0.29 so it can read keys-iroh-sync's metadata. Lives alongside the 0.28 bindgen because that crate is version-locked to keys-ffi's uniffi dep."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
publish.workspace = true

[lints]
workspace = true

[[bin]]
name = "uniffi-bindgen-swift-029"
path = "src/main.rs"

[dependencies]
uniffi = { version = "0.29", features = ["cli"] }
